NetBSD Problem Report #51551

From www@NetBSD.org  Tue Oct 11 15:38:57 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 61BC17A28E
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 11 Oct 2016 15:38:57 +0000 (UTC)
Message-Id: <20161011153856.6C9CA7A2EB@mollari.NetBSD.org>
Date: Tue, 11 Oct 2016 15:38:56 +0000 (UTC)
From: dcb@NetBSD.org
Reply-To: dcb@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/arm/nvidia/tegra_xusb.c: possible cut-n-paste error ?
X-Send-Pr-Version: www-1.0

>Number:         51551
>Category:       port-arm
>Synopsis:       src/sys/arch/arm/nvidia/tegra_xusb.c: possible cut-n-paste error ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    skrll
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Oct 11 15:40:00 +0000 2016
>Closed-Date:    Tue Jan 03 12:40:50 +0000 2017
>Last-Modified:  Tue Jan 03 12:40:50 +0000 2017
>Originator:     David Binderman
>Release:        cvs-20161011
>Organization:
>Environment:
>Description:
1.
[src/sys/arch/arm/nvidia/tegra_xusb.c:214] -> [src/sys/arch/arm/nvidia/tegra_xusb.c:216]: (style) Variable 'error' is reassigned a value before the old one has been used.

Source code is

    error = clk_set_rate(clk, 102000000);
    rate = clk_get_rate(clk);
    error = clk_enable(clk); /* XXX set frequency */
    device_printf(sc->sc_dev, "rate %u error %d\n", rate, error);

2.

[src/sys/arch/arm/nvidia/tegra_xusb.c:223] -> [src/sys/arch/arm/nvidia/tegra_xusb.c:225]: (style) Variable 'error' is reassigned a value before the old one has been used.

    error = clk_set_rate(clk, 204000000);
    rate = clk_get_rate(clk);
    error = clk_enable(clk);
    device_printf(sc->sc_dev, "rate %u error %d\n", rate, error);

3.

[src/sys/arch/arm/nvidia/tegra_xusb.c:272] -> [src/sys/arch/arm/nvidia/tegra_xusb.c:274]: (style) Variable 'error' is reassigned a value before the old one has been used.

    error = clk_set_parent(clk, pll_u_48);
    rate = clk_get_rate(clk);
    error = clk_enable(clk); /* XXX set frequency */
    device_printf(sc->sc_dev, "rate %u error %d\n", rate, error);

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-arm-maintainer->jakllsch
Responsible-Changed-By: maya@NetBSD.org
Responsible-Changed-When: Sat, 19 Nov 2016 19:12:55 +0000
Responsible-Changed-Why:
In case you find this interesting


Responsible-Changed-From-To: jakllsch->port-arm-people
Responsible-Changed-By: maya@NetBSD.org
Responsible-Changed-When: Sun, 20 Nov 2016 11:41:53 +0000
Responsible-Changed-Why:
the driver in question is an ugly work in progress, and jak said he'd like to leave it at that for now.


Responsible-Changed-From-To: port-arm-people->port-arm-maintainer
Responsible-Changed-By: dholland@NetBSD.org
Responsible-Changed-When: Tue, 03 Jan 2017 10:37:53 +0000
Responsible-Changed-Why:
use right address


Responsible-Changed-From-To: port-arm-maintainer->skrll
Responsible-Changed-By: skrll@NetBSD.org
Responsible-Changed-When: Tue, 03 Jan 2017 10:45:48 +0000
Responsible-Changed-Why:
Take


From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51551 CVS commit: src/sys/arch/arm/nvidia
Date: Tue, 3 Jan 2017 12:37:08 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Tue Jan  3 12:37:08 UTC 2017

 Modified Files:
 	src/sys/arch/arm/nvidia: tegra_xusb.c

 Log Message:
 Do some more error checking.

 PR/51551


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/sys/arch/arm/nvidia/tegra_xusb.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Tue, 03 Jan 2017 12:40:50 +0000
State-Changed-Why:
Another one bites the dust


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.