Do some more error checking.

PR/51551